# gg

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-static  Makefile  README.md  fetch-deps.sh
.github/workflows/: ci.yml
contrib/: get-glibc.sh
examples/gtest/: create-thunks.cc  wrapper.cc
src/: CMakeLists.txt
src/execution/: CMakeLists.txt  connection.hh  engine.hh  engine_gcloud.cc  engine_gcloud.hh  engine_gg.cc  engine_gg.hh  engine_lambda.cc  engine_lambda.hh  engine_local.cc  engine_local.hh  engine_meow.cc  engine_meow.hh  loop.cc  loop.hh  reductor.cc  reductor.hh  response.cc  response.hh
src/execution/meow/: message.cc  message.hh  util.cc  util.hh
src/frontend/: CMakeLists.txt  Makefile.am  gg-collect.cc  gg-create-thunk.cc  gg-describe.cc  gg-execute-server.cc  gg-execute.cc  gg-force-and-run.cc  gg-force.cc  gg-get.cc  gg-hash.cc  gg-infer.cc  gg-init.cc  gg-meow-worker.cc  gg-mock.cc  gg-object-server.cc  gg-put.cc  gg-repl.cc  gg-s3-download.cc  gg-s3-upload.cc  gg-thunksummary.cc  gg-trace.cc  gg.cc  lambda-invoker.cc  prune-file.cc  splice-lines.cc
src/models/: ar.cc  cli_description.cc  cli_description.hh  dir-watcher.cc  gcc-args.cc  gcc-base.cc  gcc.cc  gcc.hh  generate-deps.cc  generate-toolchain-header.py  generic.cc  ld.cc  linker-base.cc  linker.cc  nm.cc  preprocessor.cc  ranlib.cc  readelf.cc  strip.cc  timeouts.hh
src/net/: CMakeLists.txt  address.cc  address.hh  aws.cc  aws.hh  awsv4_sig.cc  awsv4_sig.hh  body_parser.hh  chunked_parser.cc  chunked_parser.hh  gcloud.cc  gcloud.hh  http_header.cc  http_header.hh  http_message.cc  http_message.hh  http_message_sequence.hh  http_request.cc  http_request.hh  http_request_parser.hh  http_response.cc  http_response.hh  http_response_parser.cc  http_response_parser.hh  lambda.cc  lambda.hh  mime_type.cc  mime_type.hh  nb_secure_socket.cc  nb_secure_socket.hh  redis.cc  redis.hh  requests.hh  s3.cc  s3.hh  secure_socket.cc  secure_socket.hh  socket.cc  socket.hh  strict_conversions.cc  (+1 more)
src/protobufs/: CMakeLists.txt  thunk.proto  util.hh
src/remote/: CMakeLists.txt  create-function.py
src/remote/common/: ggpaths.py
src/remote/lambda_function/: main.py
src/sandbox/: CMakeLists.txt  sandbox.cc  sandbox.hh
src/storage/: CMakeLists.txt  backend.cc  backend.hh  backend_gs.cc  backend_gs.hh  backend_local.hh  backend_redis.cc  backend_redis.hh  backend_s3.cc  backend_s3.hh
src/thunk/: CMakeLists.txt  factory.cc  factory.hh  function.cc  ggutils.cc  ggutils.hh  graph.cc  graph.hh  manifest.cc  manifest.hh  placeholder.cc  placeholder.hh  thunk.cc  thunk.hh  thunk_reader.cc  thunk_reader.hh  thunk_writer.cc  thunk_writer.hh
src/trace/: CMakeLists.txt  invocation.cc  invocation.hh  syscall.hh  tracer.cc  tracer.hh
src/trace/linux/x86_64/: syscalltbl.cc
src/tui/: CMakeLists.txt  status_bar.cc  status_bar.hh
src/util/: CMakeLists.txt  args.cc  args.hh  base16.cc  base16.hh  base64.cc  base64.hh  child_process.cc  child_process.hh  chunk.hh  digest.cc  digest.hh  exception.hh  file_descriptor.cc  file_descriptor.hh  inotify.cc  inotify.hh  ipc_socket.cc  ipc_socket.hh  iterator.hh  optional.hh  path.cc  path.hh  pipe.cc  pipe.hh  poller.cc  poller.hh  serialization.cc  serialization.hh  signalfd.cc  signalfd.hh  system_runner.cc  system_runner.hh  temp_dir.cc  temp_dir.hh  temp_file.cc  temp_file.hh  timeit.cc  timeit.hh  timelog.cc  (+9 more)
tests/: path-test.cc  sandbox-test.cc  thunk-roundtrip.cc
tools/lambda_bins/: gg-collect-lambda  gg-create-thunk-lambda  gg-create-thunk-static  gg-hash-lambda
tools/pygg/: README.md  import_wrapper.py  pygg.py
tools/pygg/examples/: add_anon.py  fib.py  fib_bin.py  fib_files.py  fib_future.py  fib_split.py  fib_split_call.py  fib_split_default.py  sleep_future.py  trib.py
tools/pygg/examples/not-testable/: merge_sort.py
tools/pygg/test/: test_examples.py
